2007-09-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AttributeEndsWithAttributeSuffixRule.cs:  Fixed a
	NullReferenceException when the current type is System.Object.  Change
	cast to as operator for avoid two type tests.

2007-09-13  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: New.  Build Gendarme.Rules.Naming rules and tests.
	* Gendarme.Rules.Naming.xml.in: New.  Configuration for
	Gendarme.Rules.Naming.
	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs,
	UsePluralNameInFlagEnumsRule.cs,
	UseSingularNameInEnumsUnlessAreFlagsRule.cs,
	AttributeEndsWithAttributeSuffixRule.cs:  New. Rules for check the
	naming conventions.
